--- a/index.html
+++ b/index.html
@@ -13,6 +13,53 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- HEADER -->
+    <header>
+        <h1>
+            Meet Our Team
+        </h1>
+    </header>
+
+    <!-- MAIN -->
+    <main>
     
+        <div class="container">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi molestias quas dicta recusandae aspernatur, totam fugit animi beatae quaerat quasi voluptatum delectus impedit explicabo ex, et tempore dolore? Assumenda, animi: </p>
+            <!-- COLUMN SECTION -->
+            <section class="column-section">
+                <div class="clearfix">
+                    <div class="col profile">
+                        <img src="img/male1.png" alt="">
+                        <strong class="name">MARCO BIANCHI</strong>
+                    </div>
+                    <div class="col profile">
+                        <img src="img/female1.png" alt="">
+                        <strong class="name">LAURA ROSSI</strong>
+                    </div>
+                    <div class="col profile">
+                        <img src="img/male2.png" alt="">
+                        <strong class="name">GIORGIO VERDI</strong>
+                    </div>
+                    <div class="col profile">
+                        <img src="img/female2.png" alt="">
+                        <strong class="name">MARTA IPSUM</strong>
+                    </div>
+                    <div class="col profile">
+                        <img src="img/male3.png" alt="">
+                        <strong class="name">ROBERTO LOREM</strong>
+                    </div>
+                    <div class="col profile">
+                        <img src="img/female3.png" alt="">
+                        <strong class="name">DANIELA AMET</strong>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+
+
+
+
+    </main>
 </body>
 </html>
