--- a/index.html
+++ b/index.html
@@ -8,58 +8,62 @@
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- STYLE -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- HEADER -->
     <header>
-        <h1>
-            Meet Our Team
-        </h1>
+        <h1> Meet Our Team </h1>
     </header>
 
     <!-- MAIN -->
     <main>
-    
         <div class="container">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi molestias quas dicta recusandae aspernatur, totam fugit animi beatae quaerat quasi voluptatum delectus impedit explicabo ex, et tempore dolore? Assumenda, animi: </p>
-            <!-- COLUMN SECTION -->
-            <section class="column-section">
-                <div class="clearfix">
-                    <div class="col profile">
-                        <img src="img/male1.png" alt="">
-                        <strong class="name">MARCO BIANCHI</strong>
+            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi molestias quas dicta recusandae aspernatur, totam fugit animi beatae quaerat quasi voluptatum delectus impedit explicabo ex, et tempore dolore? Assumenda, animi: </h2>
+                <!-- COLUMN SECTION -->
+                <section class="column-section">
+                    <div class="clearfix">
+                        <div class="col profile">
+                            <img src="img/male1.png" alt="">   
+                            <p class="name">MARCO BIANCHI</p>
+                            <p class="job">Designer</p>
+                            <p class="email">marcobianchi@team.com</p> 
+                        </div>
+                        <div class="col profile">
+                            <img src="img/female1.png" alt="">
+                            <p class="name">LAURA ROSSI</p>
+                            <p class="job">Front-end Developer</p>
+                            <p class="email">laurarossi@team.com</p>           
+                        </div>
+                        <div class="col profile">
+                            <img src="img/male2.png" alt="">
+                            <p class="name">GIORGIO VERDI</p>
+                            <p class="job">Back-end Developer</p>
+                            <p class="email">giorgioverdi@team.com</p>
+                        </div>
+                        <div class="col profile">
+                            <img src="img/female2.png" alt="">
+                            <p class="name">MARTA IPSUM</p>
+                            <p class="job">SEO Specialist</p>
+                            <p class="email">martaipsum@team.com</p>
+                        </div>
+                        <div class="col profile">
+                            <img src="img/male3.png" alt="">
+                            <p class="name">ROBERTO LOREM</p>
+                            <p class="job">Project Manager</p>
+                            <p class="email">robertolorem@team.com</p>
+                        </div>
+                        <div class="col profile">
+                            <img src="img/female3.png" alt="">
+                            <p class="name">DANIELA AMET</p>
+                            <p class="job">Analyst</p>
+                            <p class="email">danielaamet@team.com</p>
+                        </div>
                     </div>
-                    <div class="col profile">
-                        <img src="img/female1.png" alt="">
-                        <strong class="name">LAURA ROSSI</strong>
-                    </div>
-                    <div class="col profile">
-                        <img src="img/male2.png" alt="">
-                        <strong class="name">GIORGIO VERDI</strong>
-                    </div>
-                    <div class="col profile">
-                        <img src="img/female2.png" alt="">
-                        <strong class="name">MARTA IPSUM</strong>
-                    </div>
-                    <div class="col profile">
-                        <img src="img/male3.png" alt="">
-                        <strong class="name">ROBERTO LOREM</strong>
-                    </div>
-                    <div class="col profile">
-                        <img src="img/female3.png" alt="">
-                        <strong class="name">DANIELA AMET</strong>
-                    </div>
-                </div>
-            </section>
+                </section>
         </div>
-
-
-
-
-
     </main>
 </body>
 </html>
